@@ -35,6 +35,7 @@
         <browser:page attribute="jsonLinkableSearch" name="tinymce-jsonlinkablesearch" />
         <browser:page attribute="jsonImageSearch" name="tinymce-jsonimagesearch" />
         <browser:page attribute="jsonDetails" name="tinymce-jsondetails" />
+        <browser:page attribute="jsonConfiguration" name="tinymce-jsonconfiguration" />
     </browser:pages>
 
     <browser:pages
