@@ -15,6 +15,10 @@ HISTORY
   Plone 4.1.
   [davisagli]
 
+- Add tinymce-jsonconfiguration browser view and use it in the template
+  tinymce_wysiwyg_support.pt. Make it easier to customize
+  [toutpt]
+
 1.1.5 (2010-11-14)
 ------------------
 
